add possibility to name the players and choice the score win

--- a/style.css
+++ b/style.css
@@ -22,19 +22,45 @@ body{
     justify-content: space-around;
     align-items: center;
 }
+.game-2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 button{
     border: none;
     text-transform: uppercase;
     background: none;
     color: #646464;
 }
+.player{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#player_0 , #player_1{
+    margin: 0;
+}
+.player_0, .player_1{
+    display: flex;
+
+}
+
+.current-p-0, .current-p-1{
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 5px;
+}
+.not-displayed{
+ display: none;
+}
 .dice-action{
     margin-top: 40px;
 }
-/* #new_game:hover{
-    border: #e65757 1px solid;
-    color: #e65757;
-} */
+#point{
+    width: 18%;
+    margin: 5px;
+}
 .dice{
     box-shadow: 10px 8px 31px 6px rgba(119, 119, 119, 0.33);
     -moz-box-shadow: 10px 8px 31px 6px rgba(119, 119, 119, 0.33);
@@ -77,11 +103,17 @@ button{
     font-weight: 300;
     padding: 30px;
 }
+#rulesModal h6{
+    padding: 12px;
+}
+.trophy{
+    width: 100%;
+}
 @media screen and (min-width : 728px){
     .game-2{
         width: 80%;
-        flex-direction: row;
         display: flex;
+        flex-direction: row;
         align-content: stretch;
         justify-content: space-between;
         align-items: center;
@@ -91,5 +123,12 @@ button{
     }
     .dice-action{
         margin-top: none;
+    }
+    #point{
+        width: 15%;
+        padding: 5px;
+    }
+    .player_0, .player_1{
+        width: 200px;
     }
 }
