--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body{
     background-image: linear-gradient(304deg, #905a46 0%, #f5b26a 50%, #ffb946 100%);
     height: 100vh;
     width: 100vw;
+    padding: 10px;
 }
 .game{
     background: linear-gradient(to top , #f7f7f7 50% , #ffffff 50%);
-    height: 100vh;
-    margin: 10px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
