--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 .selector-for-some-widget {
     box-sizing: content-box;
-  }  
+} 
+
 body{
     text-transform: uppercase;
     color: #303030;
@@ -12,8 +13,8 @@ body{
     background-image: linear-gradient(304deg, #905a46 0%, #f5b26a 50%, #ffb946 100%);
     height: 100vh;
     width: 100vw;
-    padding: 10px;
 }
+
 .game{
     background: linear-gradient(to top , #f7f7f7 50% , #ffffff 50%);
     height: 100%;
@@ -22,60 +23,43 @@ body{
     justify-content: space-around;
     align-items: center;
 }
+
 .game-2{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 button{
     border: none;
     text-transform: uppercase;
     background: none;
     color: #646464;
 }
+
 .player{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-#player_0 , #player_1{
-    margin: 0;
-}
+
 .player_0, .player_1{
     display: flex;
 
 }
 
-.current-p-0, .current-p-1{
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: 5px;
-}
 .not-displayed{
- display: none;
+    display: none;
 }
-.dice-action{
-    margin-top: 40px;
-}
+
 #point{
     width: 18%;
-    margin: 5px;
 }
+
 .dice{
     box-shadow: 10px 8px 31px 6px rgba(119, 119, 119, 0.33);
     -moz-box-shadow: 10px 8px 31px 6px rgba(119, 119, 119, 0.33);
     -webkit-box-shadow: 10px 8px 31px 6px rgba(119, 119, 119, 0.33);
-}
-
-#roll_dice, #hold, #stop_game{
-    padding: 5px;
-}
-
-.roll_dice{
-    margin-top: 15px;
-}
-.player{
-    text-align: center;
 }
 
 #global_score_p_0, #global_score_p_1{
@@ -83,10 +67,14 @@ button{
     font-size: 30px;
 }
 
+#buttonAlert{
+    background-color: #e65757;
+    color: #fff;
+}
+
 .current_score{
     font-weight: 300;
     background-color: #e65757;
-    padding: 5px;
     width: 150px;
     height: 90px;
 }
@@ -94,21 +82,21 @@ button{
     color: #fff;
     font-size: 30Px;
 }
+
 #player_0, #player_1{
     font-size: 30px;
+    word-wrap: anywhere;
 }
+
 .modal-body{
-    text-align: center;
     font-size: 14px;
     font-weight: 300;
-    padding: 30px;
 }
-#rulesModal h6{
-    padding: 12px;
-}
+
 .trophy{
     width: 100%;
 }
+
 @media screen and (min-width : 728px){
     .game-2{
         width: 80%;
@@ -121,12 +109,9 @@ button{
     .game{
         background: linear-gradient(to left , #f7f7f7 50% , #ffffff 50%);
     }
-    .dice-action{
-        margin-top: none;
-    }
+
     #point{
         width: 15%;
-        padding: 5px;
     }
     .player_0, .player_1{
         width: 200px;
